fix: remove proactive isNativeAccessEnabled() checks from terminal providers (#1846)
On JDK 24-25, Module.isNativeAccessEnabled() returns false when
--enable-native-access is not set, even though native calls still
succeed (with JVM warnings). The proactive checks in FFM, JNI, and
Exec providers caused them to reject themselves unnecessarily,
leaving only the Exec provider which cannot detect a Windows TTY,
resulting in a dumb terminal with no tab completion.

Remove the isNativeAccessEnabled() guards and let actual native calls
determine success or failure. On JDK 24-25, providers will load and
work (with JVM warnings). On future JDKs where native access is
denied by default, the actual FFM/JNI calls will throw and be caught
by TerminalBuilder.checkProvider(), which already handles provider
load failures gracefully.